--- a/_config.yml
+++ b/_config.yml
@@ -6,19 +6,19 @@
 # --- Required options --- #
 
 # Name of website
-title: FreeFaceMoCap
+title: Free Face MoCap
 
 # Your name to show in the footer
-author: Some Person
+author: Nice People
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
+  About Us: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+    - MediaPipe Face Tracking: "https://google.github.io/mediapipe/solutions/face_mesh"
+    - Blender Addon Development: "https://blender3d-tutorials.com/blender-2-9-python-addon-programming-tutorial"
+  Project repo: "https://github.com/MohamedAliRashad/FreeFaceMoCap"
 
 # --- Logo --- #
 
