--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,12 @@ author: Nice People
 # --- List of links in the navigation bar --- #
 
 navbar-links:
+  Releases: "releases"
   About Us: "aboutme"
   Resources:
     - MediaPipe Face Tracking: "https://google.github.io/mediapipe/solutions/face_mesh"
     - Blender Addon Development: "https://blender3d-tutorials.com/blender-2-9-python-addon-programming-tutorial"
-  Project repo: "https://github.com/MohamedAliRashad/FreeFaceMoCap"
+
 
 # --- Logo --- #
 
@@ -39,13 +40,13 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+  # email: "someone@example.com"
+  # rss: true  # remove this line if you don't want to show an RSS link at the bottom
+  # facebook: deanattali
+  github: "MohamedAliRashad/FreeFaceMoCap"
+  # twitter: daattali
+  # patreon: DeanAttali
+  # youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
@@ -79,7 +80,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "FreeFaceMoCap.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
